check if rcppml is the right version prior to installing

--- a/vignettes/cell_type_mapping_with_NNLS.rmd
+++ b/vignettes/cell_type_mapping_with_NNLS.rmd
@@ -13,9 +13,11 @@ We utilize the NNLS method implemented in the [RcppML](https://github.com/zdebru
 
 In this tutorial, we'll take a look at two examples. First, we have two tissue sections of a [mouse brain](#mbrain) and a single cell RNA-seq dataset from the Allen Brain Atlas. In the second example, we have a [mouse kidney](#mkidney) section and single cell RNA-seq data from the Tabula Muris Senis.
 
-```{r include=FALSE, eval=FALSE}
-install.packages(url = "https://cran.r-project.org/src/contrib/RcppML_0.3.7.tar.gz", 
+```{r include=FALSE, eval=TRUE}
+if (packageVersion("RcppML") != "0.3.7") {
+  install.packages("https://cran.r-project.org/src/contrib/RcppML_0.3.7.tar.gz", 
                  repos=NULL, type="source")
+}
 ```
 
 ```{r, message=FALSE, warning=FALSE}
